[gd_scene load_steps=2 format=3 uid="uid://31vqfbpxo8vx"]

[ext_resource type="Script" uid="uid://7kicof8m4g57" path="res://Scenes/GameCountdown/GameCountdown.gd" id="1_jmixa"]

[node name="GameCountdown" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jmixa")

[node name="TimerText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 102.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 20
text = "Time left"

[node name="GameCountdown" type="Timer" parent="."]

[connection signal="timeout" from="GameCountdown" to="." method="_on_game_countdown_timeout"]
